<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout 
android:id="@+id/loginAbsoluteLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@drawable/share_background"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<ImageView
android:id="@+id/topImg"
android:layout_width="fill_parent"
android:layout_height="32px"
android:src="@drawable/menutop"
android:layout_x="0px"
android:layout_y="0px"
>
</ImageView>
<TextView
android:id="@+id/accountTextView"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/account"
android:textColor="#5d5d5d"
android:layout_x="20px"
android:layout_y="80px"
>
</TextView>
<EditText
android:id="@+id/accountEditText"
android:layout_width="280px"
android:layout_height="40px"
android:textSize="18sp"
android:layout_x="16px"
android:layout_y="100px"
>
</EditText>
<TextView
android:id="@+id/passwordTextView"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/password"
android:textColor="#5d5d5d"
android:layout_x="20px"
android:layout_y="140px"
>
</TextView>
<EditText
android:id="@+id/passwordEditText"
android:layout_width="280px"
android:layout_height="40px"
android:textSize="18sp"
android:layout_x="16px"
android:layout_y="160px"
android:password="true"
>
</EditText>
<CheckBox
android:id="@+id/rememberMe"
android:layout_width="150px"
android:layout_height="50px"
android:text="@string/rememberme"
android:textSize="14sp"
android:textColor="#5d5d5d"
android:layout_x="60px"
android:layout_y="220px"
>
</CheckBox>
<Button
android:id="@+id/loginBtn"
android:layout_width="85px"
android:layout_height="45px"
android:text="@string/login"
android:layout_x="210px"
android:layout_y="220px"
>
</Button>
<Button
android:id="@+id/regBtn"
android:layout_width="85px"
android:layout_height="45px"
android:text="@string/register"
android:layout_x="210px"
android:layout_y="300px"
>
</Button>
<TextView
android:id="@+id/regTextView"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/registertext"
android:textSize="14sp"
android:textColor="#5d5d5d"
android:layout_x="60px"
android:layout_y="310px"
>
</TextView>
</AbsoluteLayout>